[gd_scene load_steps=5 format=3 uid="uid://olwkfqg1m22u"]

[ext_resource type="Script" path="res://entites/skeleton.gd" id="1_u6mqp"]
[ext_resource type="Texture2D" uid="uid://cxjx2hv25f3oq" path="res://icon.svg" id="2_j0a2k"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3tn8p"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ug4yo"]
radius = 7.0

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_u6mqp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3tn8p")

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(0.305882, 0.270588, 0.12549, 1)
scale = Vector2(0.101563, 0.234375)
texture = ExtResource("2_j0a2k")

[node name="hit_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_Area"]
shape = SubResource("CapsuleShape2D_ug4yo")

[node name="decayed_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="hit_Area" to="." method="_on_hit_area_area_entered"]
[connection signal="body_entered" from="hit_Area" to="." method="_on_hit_area_body_entered"]
[connection signal="timeout" from="decayed_timer" to="." method="_on_decayed_timer_timeout"]
